# ls

./: Makefile  main.py  pyproject.toml
VDgames/: cli.py
VDgames/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  vd_prime.py  vd_progression.py
